--- a/w4/exercice-2-start.html
+++ b/w4/exercice-2-start.html
@@ -12,31 +12,43 @@
       .main {
         height: 100vh;
         background: #25384B;
+        display: flex;
+        gap: 3em;
       }
 
       .left-section {
         background: #A3CFCC;
-      
+        margin-left: 3em;
+        display: flex;
+        flex-grow: 1;
       }
 
       .right-section {
         background: #F7CFB6;
-       
+        margin-right: 3em;
+        display: flex;
+        flex-direction: column;
+        width: 10em;
+        gap: 1em;
       }
 
       .item {
         background: #86C2DE;
+        display: flex;
+        height: 100px;
+        margin-left: 1em;
+        margin-right: 1em;
       }
  
     </style>
   </head>
   <body>
     <div class="main">
-      <section class="left-section"></section>
+      <section class="left-section">left-section</section>
       <section class="right-section">
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
+        <div class="item">i1</div>
+        <div class="item">i2</div>
+        <div class="item">i3</div>
       </section>
     </div>
   </body>
